Add AdventOfCode helper module

--- a/package.yaml
+++ b/package.yaml
@@ -17,3 +17,15 @@ ghc-options:
 dependencies:
   - base
 
+internal-libraries:
+  adventofcode:
+    source-dirs: lib
+    exposed-modules:
+      - AdventOfCode
+    dependencies:
+      - criterion
+      - deepseq
+      - directory
+      - filepath
+      - hspec
+
