--- a/package.yaml
+++ b/package.yaml
@@ -35,6 +35,12 @@ executables:
     main: Main.hs
     dependencies:
       - adventofcode
+  dive:
+    source-dirs: 02-dive
+    main: Main.hs
+    dependencies:
+      - adventofcode
+      - deepseq
 
 tests:
   sonar-sweep-test:
@@ -43,6 +49,13 @@ tests:
     ghc-options: -main-is Tests
     dependencies:
       - adventofcode
+  dive-test:
+    source-dirs: 02-dive
+    main: Tests.hs
+    ghc-options: -main-is Tests
+    dependencies:
+      - adventofcode
+      - deepseq
 
 benchmarks:
   sonar-sweep-bench:
@@ -51,3 +64,10 @@ benchmarks:
     ghc-options: -main-is Benchmarks
     dependencies:
       - adventofcode
+  dive-bench:
+    source-dirs: 02-dive
+    main: Benchmarks.hs
+    ghc-options: -main-is Benchmarks
+    dependencies:
+      - adventofcode
+      - deepseq
