--- a/package.yaml
+++ b/package.yaml
@@ -52,6 +52,12 @@ executables:
     dependencies:
       - adventofcode
       - split
+  hydrothermal-venture:
+    source-dirs: 05-hydrothermal_venture
+    main: Main.hs
+    dependencies:
+      - adventofcode
+      - split
 
 tests:
   sonar-sweep-test:
@@ -80,6 +86,13 @@ tests:
     dependencies:
       - adventofcode
       - split
+  hydrothermal-venture-test:
+    source-dirs: 05-hydrothermal_venture
+    main: Tests.hs
+    ghc-options: -main-is Tests
+    dependencies:
+      - adventofcode
+      - split
 
 benchmarks:
   sonar-sweep-bench:
@@ -103,6 +116,13 @@ benchmarks:
       - adventofcode
   giant-squid-bench:
     source-dirs: 04-giant_squid
+    main: Benchmarks.hs
+    ghc-options: -main-is Benchmarks
+    dependencies:
+      - adventofcode
+      - split
+  hydrothermal-venture-bench:
+    source-dirs: 05-hydrothermal_venture
     main: Benchmarks.hs
     ghc-options: -main-is Benchmarks
     dependencies:
